--- a/sources/views/add_IA_Diag.ui
+++ b/sources/views/add_IA_Diag.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>450</width>
-    <height>483</height>
+    <height>437</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>ADD IA</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -138,7 +138,7 @@
              <x>0</x>
              <y>0</y>
              <width>196</width>
-             <height>183</height>
+             <height>160</height>
             </rect>
            </property>
           </widget>
@@ -155,7 +155,7 @@
              <x>0</x>
              <y>0</y>
              <width>195</width>
-             <height>183</height>
+             <height>160</height>
             </rect>
            </property>
           </widget>
