--- a/sources/views/add_ING_Diag.ui
+++ b/sources/views/add_ING_Diag.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>333</width>
-    <height>238</height>
+    <height>180</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>ADD ING</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="0,0">
    <item>
@@ -22,15 +22,15 @@
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <layout class="QFormLayout" name="formLayout">
-        <item row="1" column="1">
-         <widget class="QLineEdit" name="name"/>
-        </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>name</string>
           </property>
          </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="name"/>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label">
@@ -56,6 +56,16 @@
           </property>
          </widget>
         </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>BU</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QComboBox" name="BU"/>
+        </item>
         <item row="4" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
@@ -71,36 +81,6 @@
            </property>
           </item>
          </widget>
-        </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>state</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="1">
-         <widget class="QComboBox" name="state"/>
-        </item>
-        <item row="6" column="0">
-         <widget class="QLabel" name="label_5">
-          <property name="text">
-           <string>Client</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="1">
-         <widget class="QLineEdit" name="client"/>
-        </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="label_6">
-          <property name="text">
-           <string>BU</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="1">
-         <widget class="QComboBox" name="BU"/>
         </item>
        </layout>
       </item>
