--- a/sources/views/mainWindow.ui
+++ b/sources/views/mainWindow.ui
@@ -30,7 +30,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="adm">
        <attribute name="title">
@@ -161,57 +161,6 @@
         <string>activite</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_5">
-        <item row="0" column="0">
-         <widget class="QCalendarWidget" name="activityCalendar">
-          <property name="maximumSize">
-           <size>
-            <width>400</width>
-            <height>300</height>
-           </size>
-          </property>
-          <property name="inputMethodHints">
-           <set>Qt::ImhNoEditMenu</set>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QGroupBox" name="groupBox_4">
-          <property name="maximumSize">
-           <size>
-            <width>200</width>
-            <height>350</height>
-           </size>
-          </property>
-          <property name="title">
-           <string>Detail BU</string>
-          </property>
-          <layout class="QVBoxLayout" name="verticalLayout_7">
-           <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_7">
-             <item>
-              <widget class="QLabel" name="label_3">
-               <property name="maximumSize">
-                <size>
-                 <width>50</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>BU</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QComboBox" name="detail_BU_comboBox"/>
-             </item>
-            </layout>
-           </item>
-           <item>
-            <widget class="QTableView" name="Activity_IAsList"/>
-           </item>
-          </layout>
-         </widget>
-        </item>
         <item row="1" column="0" colspan="4">
          <widget class="QGroupBox" name="groupBox_3">
           <property name="maximumSize">
@@ -237,6 +186,48 @@
             </widget>
            </item>
           </layout>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QGroupBox" name="groupBox_8">
+          <property name="title">
+           <string>Global</string>
+          </property>
+          <layout class="QFormLayout" name="formLayout">
+           <item row="0" column="0" colspan="2">
+            <layout class="QHBoxLayout" name="horizontalLayout_9">
+             <item>
+              <widget class="QLabel" name="label_11">
+               <property name="text">
+                <string>BU</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QComboBox" name="global_BU_comboBox">
+               <item>
+                <property name="text">
+                 <string>None</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QCalendarWidget" name="activityCalendar">
+          <property name="maximumSize">
+           <size>
+            <width>400</width>
+            <height>300</height>
+           </size>
+          </property>
+          <property name="inputMethodHints">
+           <set>Qt::ImhNoEditMenu</set>
+          </property>
          </widget>
         </item>
         <item row="2" column="0" colspan="4">
@@ -562,31 +553,60 @@
           </item>
          </layout>
         </item>
-        <item row="0" column="2">
-         <widget class="QGroupBox" name="groupBox_8">
-          <property name="title">
-           <string>Global</string>
+        <item row="0" column="1">
+         <widget class="QGroupBox" name="groupBox_4">
+          <property name="maximumSize">
+           <size>
+            <width>200</width>
+            <height>350</height>
+           </size>
           </property>
-          <layout class="QFormLayout" name="formLayout">
-           <item row="0" column="0" colspan="2">
-            <layout class="QHBoxLayout" name="horizontalLayout_9">
+          <property name="title">
+           <string>Detail BU</string>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout_2">
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
              <item>
-              <widget class="QLabel" name="label_11">
+              <widget class="QLabel" name="label_12">
+               <property name="maximumSize">
+                <size>
+                 <width>50</width>
+                 <height>16777215</height>
+                </size>
+               </property>
                <property name="text">
                 <string>BU</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QComboBox" name="global_BU_comboBox">
-               <item>
-                <property name="text">
-                 <string>None</string>
-                </property>
-               </item>
-              </widget>
+              <widget class="QComboBox" name="detail_BU_comboBox"/>
              </item>
             </layout>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_7">
+             <item>
+              <widget class="QLabel" name="label_3">
+               <property name="maximumSize">
+                <size>
+                 <width>50</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>manager</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QComboBox" name="managerList"/>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <widget class="QTableView" name="Activity_IAsList"/>
            </item>
           </layout>
          </widget>
