--- a/sources/views/mainWindow.ui
+++ b/sources/views/mainWindow.ui
@@ -30,7 +30,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="adm">
        <attribute name="title">
@@ -601,7 +601,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QComboBox" name="managerList"/>
+              <widget class="QComboBox" name="activityManagerList"/>
              </item>
             </layout>
            </item>
@@ -617,85 +617,108 @@
        <attribute name="title">
         <string>Business</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_7">
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="3" column="0">
+         <layout class="QVBoxLayout" name="verticalLayout_7">
+          <item>
+           <widget class="QTableView" name="business_ing_table"/>
+          </item>
+          <item>
+           <widget class="QGroupBox" name="groupBox_9">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>150</height>
+             </size>
+            </property>
+            <property name="title">
+             <string>totaux</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_43">
+          <property name="text">
+           <string>ingenieur &amp; missions</string>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="0">
-         <layout class="QGridLayout" name="gridLayout_3">
-          <item row="1" column="1">
-           <widget class="QLabel" name="label_43">
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QLabel" name="label">
             <property name="text">
-             <string>ingenieur &amp; missions</string>
+             <string>current month</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDateEdit" name="business_current_month_select">
+            <property name="displayFormat">
+             <string>MM/yyyy</string>
+            </property>
+            <property name="date">
+             <date>
+              <year>2020</year>
+              <month>11</month>
+              <day>1</day>
+             </date>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="3" column="1">
+         <layout class="QGridLayout" name="gridLayout_6">
+          <item row="0" column="1">
+           <widget class="QComboBox" name="business_BuComboBox"/>
+          </item>
+          <item row="2" column="1" rowspan="3">
+           <widget class="QTableView" name="business_Ing_list"/>
+          </item>
+          <item row="3" column="2">
+           <widget class="QPushButton" name="ingStopMission">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>stop mission</string>
             </property>
            </widget>
           </item>
           <item row="2" column="2">
-           <layout class="QGridLayout" name="gridLayout_6">
-            <item row="1" column="1" rowspan="3">
-             <widget class="QTableView" name="business_Ing_list"/>
-            </item>
-            <item row="0" column="1">
-             <widget class="QComboBox" name="business_BuComboBox"/>
-            </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_6">
-              <property name="text">
-               <string>Bu</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="2">
-             <widget class="QPushButton" name="ingStopMission">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="text">
-               <string>stop mission</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QPushButton" name="ingStartMission">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="inputMethodHints">
-               <set>Qt::ImhHiddenText</set>
-              </property>
-              <property name="text">
-               <string>start mission</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
+           <widget class="QPushButton" name="ingStartMission">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="inputMethodHints">
+             <set>Qt::ImhHiddenText</set>
+            </property>
+            <property name="text">
+             <string>start mission</string>
+            </property>
+           </widget>
           </item>
-          <item row="2" column="1" rowspan="2">
-           <widget class="QTableView" name="business_ing_table"/>
+          <item row="0" column="2">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>Bu</string>
+            </property>
+           </widget>
           </item>
-          <item row="0" column="1">
-           <layout class="QHBoxLayout" name="horizontalLayout_2">
-            <item>
-             <widget class="QLabel" name="label">
-              <property name="text">
-               <string>current month</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QDateEdit" name="business_current_month_select">
-              <property name="displayFormat">
-               <string>MM/yyyy</string>
-              </property>
-              <property name="date">
-               <date>
-                <year>2020</year>
-                <month>11</month>
-                <day>1</day>
-               </date>
-              </property>
-             </widget>
-            </item>
-           </layout>
+          <item row="1" column="1">
+           <widget class="QComboBox" name="businessManagerList"/>
           </item>
-          <item row="3" column="2">
+          <item row="1" column="2">
+           <widget class="QLabel" name="label_13">
+            <property name="text">
+             <string>manager</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1" colspan="2">
            <widget class="QGraphicsView" name="graphicsView"/>
           </item>
          </layout>
